--- a/src/main/resources/elastic.properties
+++ b/src/main/resources/elastic.properties
@@ -2,7 +2,7 @@
 ################################	Elasticsearch Config	#############################
 #########################################################################################
 #(\u652f\u6301\u96c6\u7fa4\u914d\u7f6e,\u591a\u670d\u52a1\u4ee5','\u5206\u5272)
-elasticsearch.cluster.name=css-elasticsearch
+elasticsearch.cluster.name=share-elasticsearch
 elasticsearch.cluster.servers=localhost
 elasticsearch.cluster.username=
 elasticsearch.cluster.password=
